<resources>
    <string name="app_name">SciTech</string>
    <string name="developer" translatable="false">DEVELOPER</string>
    <string name="myName">Tejas Milind Mane</string>
    <string name="myPhone" translatable="false">+91 82374 26286</string>
    <string name="myMail" translatable="false">tejasmane1710@gmail.com</string>
    <string name="how_access">1) Go to Quizzes section from bottom navigation.\n2) Select chapter.\n3) Select topic.\n4) Solve the quiz by filling all necessary details and click submit\n5) Click \'View Score\' to check score.</string>
    <string name="how_notes">1) Open the notes section and follow the same procedure mentioned in FAQ #1.\n2) Open the note in Google Drive app or any browser.\n3) Click the Download button and voila! Now you can access it offline.</string>
    <string name="setting">1) Navigate to setting menu.\n2) Select the medium from setting options.\n3) Select medium as English or Marathi.\n4) (Optional) You can switch to light and dark mode from settings.\n5) The settings currently applied will be shown on the right.\n6) Content you see in other tabs is based on settings applied.</string>
    <string name="assess">1) All assessments will be timed.\n2) Enter the code provided to you.\n3) Read the instructions carefully and click \'Start\'.\n4) Don\'t forget to manually Submit as form will not be auto submitted.\n5) Submit at least 15 seconds before test ends so that you can check your score.</string>
    <string name="developer_profile" translatable="false">Developer Profile</string>
    <string name="facebook_link" translatable="false">Facebook link</string>
    <string name="twitter_link" translatable="false">Twitter Link</string>
    <string name="instagram_link" translatable="false">Instagram Link</string>
    <string name="red_line" translatable="false">Red Line</string>
    <string name="green_line" translatable="false">Green Line</string>
    <string name="follow_me">Follow me</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="contact">Contact</string>
    <string name="notes">Notes</string>
    <string name="quiz">Quizzes</string>
    <string name="setting_tab">Settings</string>
    <string name="time_left">TIME LEFT %1$s</string>
    <string name="submit_within">SUBMIT WITHIN: %1$s</string>
    <string name="test_finish">TEST FINISHED</string>
    <string name="faqs">Help</string>
    <string name="quiz_faq">● How to access quizzes?</string>
    <string name="notes_faq">● How to access notes offline?</string>
    <string name="medium_faq">● How to change medium and class?</string>
    <string name="exam_faq">● Assessment section</string>
    <string name="alert_dialog_name" translatable="false">Name</string>
    <string name="android_version" translatable="false">Android version</string>
    <string name="bug_information" translatable="false">Bug information</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="start">START</string>
    <string name="test_inst">1) As soon as you press the \'Start\' button, exam will begin.\n2) Time left will be shown at top.\n3) You will get only 1 chance to solve the test.\n4) DON\'T FORGET TO SUBMIT TEST BEFORE TIMER RUNS OUT.</string>
    <string name="report_submit">Report submitted: Sorry for the inconvenience</string>
    <string name="name_erro">Name can only contain letters</string>
    <string name="medium">Medium</string>
    <string name="std">Class</string>
    <string name="theme">App Theme</string>
    <string name="feedback_and_suggestion">Report a bug</string>
    <string name="contactus">Contact us</string>
    <string name="rate">Rate and review</string>
    <string name="share">Share App</string>
    <string name="video_lectures">Videos</string>
    <string name="instruc">Read the following instructions carefully.</string>
    <string name="best_luck">Best Luck !!!</string>
    <string name="doubts">Doubts</string>
    <string name="ask_experts">Ask Experts</string>
    <string name="describe_your_question_here">Describe your question here</string>
    <string name="select_a_chapter">Select a chapter</string>
    <string name="choose">Choose a chapter first</string>
    <string name="empty">Question cannot be blank</string>
    <string name="suc_sumitted">Submitted Successfully</string>
    <string name="dismiss">Dismiss</string>
    <string name="doubt_session">New Doubt Section</string>
    <string name="gotit">Got It!</string>
    <string name="warn_doubt">Only post subject related doubts here. Do not put your queries regarding the app here. There is a separate section for this. Our experts will answer your query within 24 hr.</string>
    <string name="recorded">Once our experts answer it, it will appear in the Doubt section.</string>
    <string name="weak_network_connection">Poor Network Connection</string>
    <string name="answer">Answer:</string>
    <string name="QR">QR</string>
    <string name="title_zoomclient">Zoom Meetings</string>
</resources>