<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruc"
        android:textColor="@color/set_text"
        android:gravity="start"
        android:fontFamily="@font/convergence"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/test_inst"
        android:textColor="@color/set_text"
        android:lineSpacingExtra="10dp"
        android:fontFamily="@font/convergence"
        android:textSize="18sp"
        android:padding="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/best_luck"
        android:gravity="center"
        android:textColor="@color/select"
        android:lineSpacingExtra="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/convergence"
        android:textSize="22sp"
        android:padding="10dp"/>


    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/oval"
        android:fontFamily="@font/convergence"
        android:text="@string/start"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>