<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".activities.About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="60dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".activities.About">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:text="@string/developer"
                android:textColor="@color/set_text"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/select" />

            <ImageView
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/developer_profile"
                android:src="@drawable/mine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/amarante"
                android:text="@string/myName"
                android:textColor="@color/set_text"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autoLink="phone"
                android:fontFamily="@font/amarante"
                android:text="@string/myPhone"
                android:textColor="@color/set_text"
                android:textColorLink="@color/set_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:autoLink="email"
                android:fontFamily="@font/amarante"
                android:text="@string/myMail"
                android:textColor="@color/set_text"
                android:textColorLink="@color/set_text"
                android:textSize="16sp" />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/convergence"
        android:text="@string/follow_me"
        android:textColor="@color/text_hint"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_above="@id/copyright"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tw"
            android:contentDescription="@string/twitter_link"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/twitter"
            android:tag="https://twitter.com/tejasmmane" />

        <ImageView
            android:id="@+id/fb"
            android:contentDescription="@string/facebook_link"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/facebook"
            android:tag="https://www.facebook.com/tejas.mane.14289"/>

        <ImageView
            android:id="@+id/ins"
            android:contentDescription="@string/instagram_link"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:paddingHorizontal="3dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/insta"
            android:tag="https://www.instagram.com/tejas_.mane"/>

    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="© 2020 Tejas Mane"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_hint"
        android:fontFamily="@font/bree_serif" />

</RelativeLayout>