<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:minWidth="250dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_and_suggestion"
        android:textColor="@color/set_text"
        android:fontFamily="@font/convergence"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner"
        android:textColor="@color/set_text"
        android:textColorHint="@color/text_hint"
        android:hint="@string/alert_dialog_name"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/convergence"
        android:textSize="14sp"
        android:padding="10dp"
        android:cursorVisible="true"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner"
        android:textColor="@color/set_text"
        android:textColorHint="@color/text_hint"
        android:hint="@string/android_version"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/convergence"
        android:textSize="14sp"
        android:padding="10dp"
        android:cursorVisible="true"
        android:inputType="numberDecimal"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner"
        android:textColor="@color/set_text"
        android:textColorHint="@color/text_hint"
        android:hint="@string/bug_information"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/convergence"
        android:textSize="14sp"
        android:padding="10dp"
        android:cursorVisible="true"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?buttonBarStyle"
        android:background="@color/background">
        <Button
            android:id="@+id/negative"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/transparent"
            android:fontFamily="@font/convergence"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/select"/>

        <Button
            android:id="@+id/positive"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:fontFamily="@font/convergence"
            android:background="@color/transparent"
            android:textColor="@color/select"/>
    </LinearLayout>


</LinearLayout>