<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="newDoubt"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/chapter"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/outline"
            android:text="@string/select_a_chapter"
            android:textColor="@color/set_text"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:fontFamily="@font/convergence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:gravity="top"
                android:padding="10dp"
                android:background="@drawable/outline"
                android:hint="@string/describe_your_question_here"
                android:textColorHint="@color/text_hint"
                android:textColor="@color/set_text"
                android:textSize="18sp"
                android:fontFamily="@font/convergence"/>

        <Button
            android:id="@+id/submit_doubt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/convergence"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/oval"
            android:text="@string/submit"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="20dp"
            android:scaleType="fitXY"
            android:id="@+id/ad"
            android:background="@drawable/ssc_quiz"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3015278233978080/6939596998"
            ads:layout_constraintBottom_toBottomOf="parent">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>

</ScrollView>