<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212829"
    tools:context=".activities.Splash">


    <ImageView
        android:contentDescription="@string/green_line"
        android:id="@+id/greenline"
        android:layout_width="10dp"
        android:layout_height="115dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/redline"
        android:background="@drawable/green_line" />

    <ImageView
        android:contentDescription="@string/red_line"
        android:id="@+id/redline"
        android:layout_width="10dp"
        android:layout_height="150dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/red_line" />

    <ImageView
        android:contentDescription="@string/red_line"
        android:id="@+id/redbottom"
        android:layout_width="10dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/red_line" />

    <ImageView
        android:contentDescription="@string/green_line"
        android:id="@+id/greenbottom"
        android:layout_width="10dp"
        android:layout_height="115dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/redbottom"
        android:background="@drawable/green_line" />


    <LinearLayout
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:alpha="0"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/amarante"
            android:text="@string/app_name"
            android:textColor="#fc1681"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/name"
        android:layout_marginTop="24dp"/>


</RelativeLayout>